added foundation; added first implementation that works with a flat data array

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,12 +10,13 @@ html
 
     meta(name='viewport', content='width=device-width,initial-scale=1')
 
-    link(rel='stylesheet', href='/css/style.css')
+    link(rel='stylesheet', href='/css/foundation.min.css')
     link(rel='stylesheet', href='/css/eatingstats.css')
-
-    script(src='/js/libs/modernizer-2.0.6.min.js')
-
+    
   body
     div(id='container')!= body
 
-    script(src='/js/libs/jquery-1.6.2.min.js')
+    script(src='/js/libs/foundation.min.js')
+    script(src='/js/libs/app.js')
+    script(src='/js/libs/d3.v2.min.js')
+    script(src='/js/app.js')
