--- a/public/css/eatingstats.css
+++ b/public/css/eatingstats.css
@@ -11,12 +11,17 @@
   margin: 40px auto;
   width: 800px;
 }
+.char line {
+  shape-rendering: crispEdges;
+}
 .chart rect{
   stroke: white;
-  fill: #35478C;
+  fill: steelblue;
+  shape-rendering: crispEdges;
+  /*fill: #35478C;*/
 /*  fill: url(../images/thumbnails/20_12939271197.jpg);*/
 }
-.chart rect.weight{
+/*.chart rect.weight{
   fill: #4E7AC7;
 }
 .chart text{
@@ -30,4 +35,4 @@
 }
 .chart text.weight{
   font-size: 9px;
-}
+}*/
