--- a/views/index.jade
+++ b/views/index.jade
@@ -1,1 +1,12 @@
 h1 #openphil
+
+div.row
+	#diff_stats_container.graph
+
+	div.description
+		h2 weight differences
+		p After collecting the data, the weight differences from one day to the next will be calculated and stacked by the day of week they have been collected.
+		p The blue bars are showing the spreading of differences while the short black bars mark the average delta.
+
+div.row
+	#weight_container
