--- a/views/index.jade
+++ b/views/index.jade
@@ -4,9 +4,13 @@ div.row
 	#diff_stats_container.graph
 
 	div.description
-		h2 weight differences
+		h2 Weight differences
 		p After collecting the data, the weight differences from one day to the next will be calculated and stacked by the day of week they have been collected.
 		p The blue bars are showing the spreading of differences while the short black bars mark the average delta.
 
 div.row
-	#weight_container
+	#weight_container.graph
+
+	div.description
+		h2 Last 28 days
+		p The graph is showing the actual weight measurements of the last 28 days.
