--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,7 +15,7 @@ html
   body
     div(id='container')!= body
 
-    script(src='/js/libs/foundation.min.js')
-    script(src='/js/libs/app.js')
+    script(src='/js/jquery.min.js')
+    script(src='/js/moment.min.js')
     script(src='/js/libs/d3.v2.min.js')
     script(src='/js/app.js')
