--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,7 @@ html
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
 
-    title eating stats
+    title #openphil
     meta(name='description', content='a very personal hackday project')
     meta(nane='author', content='Philipp Küng')
 
