replaced link to tumblr with the tumblr archive link since it provides a better overview

--- a/views/index.jade
+++ b/views/index.jade
@@ -9,7 +9,7 @@ div.row
 			a(href='http://eatingstats.tumblr.com/tagged/weight') weight measurements
 			|  for just the last 28 days. However I have been collecting those measurements since November 17th 2011. Hoping to get some insights out of them to finally gain weight. 
 		p In case you are wondering what it is I am consuming each day, have a look at 
-			a(href='http://eatingstats.tumblr.com') eatingstats.tumblr.com
+			a(href='http://eatingstats.tumblr.com/archive') eatingstats.tumblr.com
 			|  and scroll through the wall of images.
 
 div.row
