cleaned up by removing a lot of unused and out of date files

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,5 +17,5 @@ html
 
     script(src='/js/jquery.min.js')
     script(src='/js/moment.min.js')
-    script(src='/js/libs/d3.v2.min.js')
+    script(src='/js/d3.v2.min.js')
     script(src='/js/app.js')
